test/libsolidity/syntaxTests/errors/clash_function_error_inheritance.sol
contract A { function Err() public pure {} }
contract B is A { error Err(); }
// ----
// DeclarationError 9097: (63-75): Identifier already declared.
